--- a/ProjetoDoacaoSangue/DoacaoSangue.Web/Web.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.Web/Web.config
@@ -17,18 +17,20 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Forms">
-      <forms name="DoacaoSangue.ASPXAUTH" loginUrl="~/login" defaultUrl="~/home" slidingExpiration="false" timeout="30"></forms>
+      <forms name="DoacaoSangue.ASPXAUTH" loginUrl="~/login" defaultUrl="~/home" slidingExpiration="false"></forms>
     </authentication>
     <authorization>
-      <deny users="?"/>
+      <deny users="?" />
     </authorization>
-    <membership defaultProvider="MyMembershipProvider">
-      <providers>
-        <clear />
-        <add name="MyMembershipProvider" type="DoacaoSangue.Web.Infra.MyMembershipProvider, DoacaoSangue.Web" />
-      </providers>
-    </membership>
   </system.web>
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
+    </staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
