--- a/ProjetoDoacaoSangue/DoacaoSangue.AuthServerApi/Web.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.AuthServerApi/Web.config
@@ -3,11 +3,11 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-<configuration>
+<configuration> 
   <appSettings>
     <add key="Token:EndPointPath" value="/oauth2/token" />
     <add key="Token:AccessTokenFormat" value="http://localhost/DoacaoSangue.AuthServerApi" />
-    <add key="Token:Expiration" value="30" />
+    <add key="Token:Expiration" value="120" />
     <add key="Token:AllowInsecureHttp" value="true" />
     <add key="AudienceTest:ClientId" value="04c0a7294084408bafc9da3a932f4bca" />
     <add key="AudienceTest:Base64Secret" value="JTIsntuB5YzW1YG3gdH1elUma0S3geUHrXNFtGt6d3s" />
@@ -37,6 +37,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
