--- a/ProjetoDoacaoSangue/DoacaoSangue.Web/Web.Release.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.Web/Web.Release.config
@@ -7,13 +7,16 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+  <appSettings>
+    <add key="AuthTokenServer"
+      value="http://doacaosangueauth.azurewebsites.net/oauth2/token"
+      xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
+    <add key="ApiResourceServer"
+      value="http://doacaosangueapi.azurewebsites.net/api"
+      xdt:Transform="SetAttributes(value)" xdt:Locator="Match(key)"/>
+  </appSettings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
