--- a/ProjetoDoacaoSangue/DoacaoSangue.Api/packages.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.Api/packages.config
@@ -7,7 +7,11 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net461" />
@@ -18,4 +22,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net461" />
 </packages>
