--- a/ProjetoDoacaoSangue/DoacaoSangue.AuthServerApi/packages.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.AuthServerApi/packages.config
@@ -6,6 +6,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
@@ -17,5 +21,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
   <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net461" />
 </packages>
