--- a/ProjetoDoacaoSangue/DoacaoSangue.Web/packages.config
+++ b/ProjetoDoacaoSangue/DoacaoSangue.Web/packages.config
@@ -11,7 +11,11 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
@@ -19,5 +23,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net461" />
 </packages>
